# pydupe

./: .gitignore  LICENSE  README.md  README.rst  main.py  mypy.ini  pyproject.toml  setup.py  timeit.py  ttt.py
pydupe/: cli.py  cmd.py  cmd_hash.py  config.py  console.py  data.py  db.py  dupetable.py  hasher.py  lutable.py  mover.py  ttt.py  utils.py
pydupe/tests/: test_Dupetable.py  test_Dupetable_dedupe_within.py  test_Hasher.py  test_Mover.py  test_database.py  test_func.py
src/pydupe/: cli.py  command.py  config.py  data.py  db.py  dupetable.py  hasher.py  lutable.py  mover.py  try_lutable.py
src/tests/: test_Dupetable.py  test_Dupetable_autoselect.py  test_Dupetable_clear.py  test_Dupetable_dedupe_within.py  test_Dupetable_one_file_in_dupe_local.py  test_Hasher.py  test_cli.py  test_database.py  test_fparms.py  test_lutable.py
tests/: test_Dupetable.py  test_Dupetable_autoselect.py  test_Dupetable_clear.py  test_Dupetable_dedupe_within.py  test_Dupetable_one_file_in_dupe_local.py  test_Hasher.py  test_Mover.py  test_cli.py  test_database.py  test_debug.py  test_fparms.py  test_func.py  test_lutable.py
