[tool.poetry]
name = "pydupe"
version = "1.2.4dev"
description = "A python script to deal with dupes"
authors = ["chsachs <python@sachsmail.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^12.4.4"
rich-click = "^1.4"
more-itertools = "^8.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pydupe = 'pydupe.cli:cli'
